# Morpheus

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  cli.py  cli_argparse.py  cli_click.py  commands.sh  config.py  cudf_subword_helper.py  cudf_tensort.ipynb  cudf_tensort_nb.py  grpc_pipeline.py  grpc_preprocessing.py  inference_pytorch.py  inference_tensorrt.py  inference_triton.py  inference_triton_onnx.py  launch_kafka.sh  network_graph_viz_frames_clean_nb.py  onnx_to_trt.py  packages.txt  pcap_dump_small.json  pipeline.py  pyproject.toml  request.proto  request.py  run_pipeline.py  setup.cfg  setup.py  streamz_core.py  streamz_dask.py  temp.dot  test_messagemeta.py  test_stream.py  (+5 more)
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: bug_report.md
ci/checks/: copyright.py
cmake/: ccache.conf.in  configure_cuda_architecture.cmake  configure_toolchain.cmake  dependencies.cmake  get_cpm.cmake  import-rapids-cmake.cmake  setup_cache.cmake
cmake/vcpkg_triplets/: x64-linux-dynamic.cmake
data/: columns_ae.txt  email.jsonlines  nvsmi.jsonlines
docker/: Dockerfile  build_container.sh  build_container_dev.sh  build_container_release.sh  build_dev_container.sh  commands.sh  run_container_dev.sh  run_container_release.sh  run_dev_container.sh
docs/: requirement.txt
docs/source/: advanced_usage.rst  api.rst  basic_usage.rst  conf.py  dask_integration.rst  index.rst  intro.rst  kafka.rst  morpheus_developer_documentation.md  stages.rst  triton.rst
examples/Anomaly Detection/: README.md  cli.py  pcap_data_producer.py  user_prof_preprocessing.py  user_prof_serialize.py
examples/abp_nvsmi_detection/: README.md
examples/abp_pcap_detection/: README.md  abp_pcap_preprocessing.py  run.py
examples/anomaly_detection/: README.md  pcap_data_producer.py  run.py  user_prof_preprocessing.py  user_prof_serialize.py
examples/developer_guide/3_simple_cpp_stage/: CMakeLists.txt  pass_thru.py
examples/developer_guide/3_simple_cpp_stage/_lib/: pass_thru.cpp  pass_thru.hpp
examples/developer_guide/4_rabbitmq_cpp_Stage/: CMakeLists.txt  README.md  rabbitmq_source_stage.py  read_simple.py  write_simple.py
examples/developer_guide/4_rabbitmq_cpp_Stage/_lib/: rabbitmq_source.cpp  rabbitmq_source.hpp
examples/developer_guide/4_rabbitmq_cpp_Stage/cmake/: Configure_SimpleAmqpClient.cmake  Configure_rabbitmq.cmake  dependencies.cmake
examples/dfp_workflow/: README.md  docker-compose.yml
examples/digital_fingerprinting/: README.md  run_cloudtrail_dfp.py
examples/gnn_fraud_detection_pipeline/: README.md  requirements.yml  run.py
examples/multi_in_multi_out/: README.md  run.py
examples/nlp_phishing_detection/: README.md
models/: .gitattributes  README.md  model-information.csv  model_cards.csv
morpheus/: CMakeLists.txt  __init__.py  _version.py  cli.py  config.py
morpheus/_lib/: CMakeLists.txt  __init__.py  common.cpp  cudf_helpers.pyx  file_types.cpp  messages.cpp  stages.cpp
morpheus/_lib/cmake/libraries/: cuda_utils.cmake  cudf_helpers.cmake  morpheus.cmake
morpheus/_lib/cmake/python_modules/: common.cmake  file_types.cmake  messages.cmake  stages.cmake
morpheus/_lib/include/morpheus/: common.hpp  cudf_helpers.hpp  file_types.hpp  matx_functions.hpp  messages.hpp  serializers.hpp  stages.hpp  table_info.hpp  type_utils.hpp
morpheus/_lib/include/morpheus/messages/: multi.hpp
morpheus/_lib/include/morpheus/objects/: table_info.hpp  tensor_object.hpp
morpheus/_lib/include/morpheus/stages/: kafka_source.hpp  preprocess_fil.hpp  write_to_file.hpp
morpheus/_lib/src/: matx_functions.cu  serializers.cpp  type_utils.cu
morpheus/_lib/src/io/: serializers.cpp
morpheus/_lib/src/messages/: multi.cpp
morpheus/_lib/src/objects/: table_info.cpp  tensor_object.cpp
morpheus/_lib/src/python_modules/: stages.cpp
morpheus/_lib/src/stages/: file_source.cpp  filter_detection.cpp  kafka_source.cpp  preprocess_fil.cpp  write_to_file.cpp
morpheus/cmake/utils/: python_module_tools.cmake
morpheus/data/: columns_ae_duo.txt
morpheus/messages/: __init__.py  multi_ae_message.py  multi_inference_ae_message.py  multi_response_message.py
morpheus/pipeline/: __init__.py  file_types.py  general_stages.py  messages.py  pipeline.py  preprocessing.py
morpheus/pipeline/inference/: __init__.py  inference_ae.py  inference_identity.py  inference_pytorch.py  inference_stage.py  inference_tensorrt.py  inference_triton.py  inference_triton_onnx.py
morpheus/pipeline/input/: __init__.py  from_cloudtrail.py  from_file.py  from_kafka.py  utils.py
morpheus/pipeline/output/: __init__.py  gen_viz_frames.py  serialize.py  to_file.py  to_kafka.py  utils.py  validation.py
morpheus/pipeline/postprocess/: __init__.py  mlflow_drift.py  timeseries.py
morpheus/pipeline/preprocess/: __init__.py  autoencoder.py
morpheus/stages/inference/: auto_encoder_inference_stage.py
morpheus/stages/input/: autoencoder_source_stage.py  azure_source_stage.py  cloud_trail_source_stage.py  duo_source_stage.py
morpheus/stages/preprocess/: preprocess_ae_stage.py  train_ae_stage.py
morpheus/utils/: __init__.py  async_map.py  atomic_integer.py  cudf_subword_helper.py  logging.py  onnx_to_trt.py  producer_consumer_queue.py  type_utils.py
noteboks/: network_graph_viz_frames_clean.ipynb
notebooks/: network_graph_viz_frames_clean_nb.py
ops/: Dockerfile
scripts/: commands.sh  compile.sh  temp_scripts.py  validation-bert-base.sh
services/: request_pb2.py  request_pb2_grpc.py
tests/: __init__.py  conftest.py  run_tests.sh  test_abp.py  test_add_classifications_stage.py  test_add_classifications_stage_pipe.py  test_add_scores_stage.py  test_add_scores_stage_pipe.py  test_cli.py  test_config.py  test_conftest.py  test_file_in_out_stage_pipe.py  test_filter_detections_stage.py  test_filter_detections_stage_pipe.py  test_hammah.py  test_inference_stage.py  test_inference_worker.py  test_messages.py  test_monitor_stage.py  test_package.py  test_phishing.py  test_serialize_stage_pipe.py  test_sid.py  test_trigger_stage.py
(+94 files in other folders)
