[build-system]
requires = [
   "setuptools",
   "wheel",
   "nvidia-pyindex",
   "versioneer-518"
]
build-backend = "setuptools.build_meta"

# List any markers that users would reasonable want to filter by.
# These show up when querying `pytest --markers`
[tool.pytest.ini_options]
markers = [
   "slow: Slow tests, the tests covered by this also need to be run in their own processes until #71 is resolved",
   "use_cpp: Test support C++ nodes and objects",
   "use_python: Test only supports Python nodes and objects"
]

filterwarnings = [
   # Warning coming from mlflow's usage of numpy
   'ignore:`np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe',
]
